# MatrixOperationsCuda

./: CMakeLists.txt
include/: matrix.cu
src/: matrixMul.cu
